# A_JAX_Framework_for_Multi-Agent_Research_in_Decentralised_Energy_Markets

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  readme.md
code/: pyproject.toml
code/data_synthetic/: producing_profiles.csv
code/data_synthetic/consuming_profiles/: actor_00.conf  actor_01.conf  actor_02.conf  actor_03.conf  actor_04.conf  actor_05.conf  actor_06.conf  actor_07.conf
code/data_synthetic/globalmarket/: globalmarket.csv
code/data_synthetic/producing_actors_hours/: actor_00.csv  actor_01.csv  actor_02.csv  actor_03.csv  actor_04.csv  actor_05.csv  actor_06.csv  actor_07.csv
code/data_synthetic_preprocess/: config.ini  consumption_create_data.py  consumption_create_profiles.py  consumption_helpers.py  globalmarket_create_data.py  production_create_data.py  production_create_profiles.py  production_helpers.py
code/data_synthetic_preprocess/antgen/: .gitignore  ActivityModel.py  ApplianceModel.py  Manifest.in  main.py  mapping.conf  pyproject.toml  setup.py
code/data_synthetic_preprocess/users/: database_baseload.conf  database_user1.conf  house10_Ann.conf  house10_Bill.conf  house11_Ann.conf  house11_Bill.conf  house11_John.conf  house11_Toby.conf  house12_Ann.conf  house12_Bill.conf  house13_Ann.conf  house14_Ann.conf  house14_Bill.conf  house14_John.conf  house15_Ann.conf  house15_Arthur.conf  house15_Bill.conf  house15_John.conf  house15_Mary.conf  house15_Toby.conf  house16_Ann.conf  house17_Arthur.conf  house19_Ann.conf  house19_Arthur.conf  house19_Bill.conf  house1_Billy.conf  house3_Arthur.conf  house4_Arthur.conf  house4_Toby.conf  house5_Ann.conf  house5_Bill.conf  house5_John.conf  house5_Toby.conf  house6_Ann.conf  (+11 more)
code/notebooks/: Synthetic_data_analysis.ipynb  experiment_analysis.ipynb  experiment_analysis_helpers.py  showcase_framework.ipynb
code/src/: abstract_dataclass.py  main.py  main_helpers.py  train.py  train_config.py  train_data_objects.py  train_helpers.py
(+74 files in other folders)
